--- a/alacritty.toml
+++ b/alacritty.toml
@@ -2,6 +2,7 @@ import = ["~/.config/alacritty/themes/themes/seashells.toml"]
 
 [window]
 padding = { x = 10, y = 10 }
+dimensions = { columns = 125, lines = 35 }
 
 [font]
 normal = { family = "FiraCode Nerd Font", style = "Regular" }
