--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -14,7 +14,7 @@
   "theme": {
     "mode": "system",
     "light": "One Light",
-    "dark": "Catppuccin Macchiato"
+    "dark": "Andromeda"
   },
   "autosave": "on_focus_change"
 }
